@@ -55,6 +55,8 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+  <key>CFBundleShortVersionString</key>
+	<string>${PRODUCT_VERSION}</string>  
 	<key>CFBundleSignature</key>
 	<string>YTDi</string>
 	<key>CFBundleVersion</key>
